--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/IMG-20210811-WA0027.jpg" class="img-fluid d-block w-100 h-100" alt="..." data-bs-interval="1000">
+                    <img src="IMG-20210811-WA0027.jpg" class="img-fluid d-block w-100 h-100" alt="..." data-bs-interval="1000">
                   </div>
                   <div class="carousel-item">
-                    <img src="/IMG-20210403-WA0049.jpg" class="img-fluid d-block w-100 h-100" alt="..." data-bs-interval="10000">
+                    <img src="IMG-20210403-WA0049.jpg" class="img-fluid d-block w-100 h-100" alt="..." data-bs-interval="10000">
                   </div>
                   <div class="carousel-item">
-                    <img src="/IMG-20210107-WA0054.jpg" class="img-fluid d-block w-100 h-100" alt="...">
+                    <img src="IMG-20210107-WA0054.jpg" class="img-fluid d-block w-100 h-100" alt="...">
                   </div>
                 </div>
               </div>
