--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="IMG-20210811-WA0027.jpg" class="img-fluid d-block w-100 h-100" alt="..." data-bs-interval="1000">
+                    <img src="IMG-20210811-WA0027.jpg" class="img-fluid d-block w-100 h-100" alt="JB Infra Plots" data-bs-interval="1000">
                   </div>
                   <div class="carousel-item">
-                    <img src="IMG-20210403-WA0049.jpg" class="img-fluid d-block w-100 h-100" alt="..." data-bs-interval="10000">
+                    <img src="IMG-20210403-WA0049.jpg" class="img-fluid d-block w-100 h-100" alt="JB Infra Plots" data-bs-interval="10000">
                   </div>
                   <div class="carousel-item">
-                    <img src="IMG-20210107-WA0054.jpg" class="img-fluid d-block w-100 h-100" alt="...">
+                    <img src="IMG-20210107-WA0054.jpg" class="img-fluid d-block w-100 h-100" alt="JB Infra Plots">
                   </div>
                 </div>
               </div>
@@ -36,7 +36,20 @@
 
         <!-- section 2 start -->
         <div class="sec-2 auto-padding">
-
+          <div class="container">
+            <div class="row">
+              <div class="col-7">
+                <h5>JB’S venture "Mominpet Village" VIKARABAD Road & TANDUR Road</h5>
+                <p>JB staring area from 220 square yard at mominpet Village</p>
+                <p>A divine space constructed besides the idea of making a perfect living space</p>
+                <p>A serene place where you can build a home right out of your dreams, that's what JB is all about built in the best of the spots with exquisite locations around and in the clam around the city are these premium plots. offering you some of the fines features without having you to hustle about any amenity these are hard to even miss.
+                </p>
+              </div>
+              <div class="col-5">
+                <iframe width="460" height="261" src="https://www.youtube.com/embed/KqSAbZyhTHM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- section 2 end -->
 
