--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
         <div class="banner">
           <img src="logo-orange-1--unscreen.gif" alt="" class="logo m-3" width="150px">
           <div class="overlay">
+           <div class="banner-heads">
             <h1 style="font-size: 3em;">JB Infra Plots</h1>
             <h3 style="font-size: 1.5em; font-weight: normal;">Everyone Deserves the Opportunity of Home</h3>
+           </div>
+            <div class="banner-contact fs-3">
+              Contact: 9908953357
+            </div>
           </div>
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -39,19 +44,102 @@
           <div class="container">
             <div class="row">
               <div class="col-md-7 col-12">
-                <h5>JB’S venture "Mominpet Village" VIKARABAD Road & TANDUR Road</h5>
-                <p>JB staring area from 220 square yard at mominpet Village</p>
-                <p>A divine space constructed besides the idea of making a perfect living space</p>
+                <div class="head">
+                  Our Prime Venture
+                </div> 
+                <h5 class="sub-head mb-4" style="background-color: rgba(255, 122, 33, 0.836); color: #ffffff; padding: 10px; border-radius: 10px; width: max-content;">
+                  <img src="location.png" alt="" width="20px" style="margin-top: -5px;"> JB’S Venture Mominpet Village
+                </h5>
+                JB staring area from 220 square yard at mominpet Village. <br>
+                A divine space constructed besides the idea of making a perfect living space <br>
                 <p>A serene place where you can build a home right out of your dreams, that's what JB is all about built in the best of the spots with exquisite locations around and in the clam around the city are these premium plots. offering you some of the fines features without having you to hustle about any amenity these are hard to even miss.
                 </p>
               </div>
               <div class="col-md-5 col-12">
-                <iframe width="460" height="261" src="https://www.youtube.com/embed/KqSAbZyhTHM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="embed-responsive embed-responsive ">
+                  <iframe class="embed-responsive-item video" style="min-height: 257px; border-radius: 10px;" width="100%" height="100%" src="https://www.youtube.com/embed/KqSAbZyhTHM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                </div>
               </div>
             </div>
           </div>
         </div>
         <!-- section 2 end -->
+
+
+        <!-- Section 3 start -->
+        <div class="sec-3 auto-padding text-center">
+          <div class="fs-1 fw-semibold text-light">Get jammed in the premium locations but not in traffic!</div>
+        </div>
+        <!-- Section 3 end -->
+
+        <!-- section 4 start -->
+        <div class="sec-4 auto-padding">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-8 col-12 px-5">
+                <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="IMG-20230207-WA0051.jpg" class="d-block w-100" alt="..." style="height: 400px;" data-bs-interval="10000">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="IMG-20210403-WA0053.jpg" class="d-block w-100" alt="..." style="height: 400px;" data-bs-interval="10000">
+                    </div>
+                    <div class="carousel-item">
+                      <img src="IMG-20210403-WA0060.jpg" class="d-block w-100" alt="..." style="height: 400px;" data-bs-interval="10000">
+                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
+                </div>
+              </div>
+              <div class="col-md-4 col-12">
+                <div class="head">Location Advantages</div>
+                <ul>
+                  <li>Very near to prosed Regional Ring Road</li>
+                  <li>20 min to Pepsi co.</li>
+                  <li>25 min to MRF</li>
+                  <li>30 min to IIT (Indian Institution of Technology)</li>
+                  <li>40 min to GITAM University</li>
+                  <li>35 min to ORR</li>
+                  <li>40 min to Woxsen Business School</li>
+                  <li>The best of IT/software hubs & commercial centers easy reach</li>
+                  <li>Easy connectivity to Patancheru, Chandanagar, Fainancial District, BHEL, Gachibowli, Hitech City, Limgampalli, Narasingi Junction.</li>
+                </ul>
+              </div>
+             
+
+
+
+              <!-- <div class="col-md-4 col-12">
+                <img src="WhatsApp Image 2023-02-12 at 14.28.29.jpg" alt="" class="img-fluid">
+              </div>
+              <div class="col-md-4 col-12">
+                <div class="head">Project Features</div>
+                <ul>
+                  <li> DTCP Approved Layout</li>
+                  <li>100% Vasthu</li>
+                  <li>80FT and 60 FT. All BT Roads</li>
+                  <li>Rain Water Harvesting Pits</li>
+                  <li>24/7 Security</li>
+                  <li>Children's Play Area</li>
+                  <li>Roads with Krebs& Avenue Plantations</li>
+                  <li>Electricity</li>
+                  <li>Water Supply</li>
+                  <li>Under Ground Drainage</li>
+                  <li>Pollution Free Environment</li>
+                </ul>
+              </div> -->
+            </div>
+          </div>
+        </div>
+        <!-- section 4 end -->
 
 
 
