--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <img src="logo-orange-1--unscreen.gif" alt="" class="logo m-3" width="150px">
           <div class="overlay">
            <div class="banner-heads">
-            <h1 style="font-size: 3em;">JB Infra Plots</h1>
-            <h3 style="font-size: 1.5em; font-weight: normal;">Everyone Deserves the Opportunity of Home</h3>
+            <div class="fs-1 fw-bold">JB Infra Plots</div>
+            <div class="fs-4 fw-semibold">Everyone Deserves the Opportunity of Home</div>
            </div>
             <div class="banner-contact fs-3">
               Contact: 9908953357
@@ -26,13 +26,13 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="IMG-20210811-WA0027.jpg" class="img-fluid d-block w-100 h-100" alt="JB Infra Plots" data-bs-interval="1000">
+                    <img src="IMG-20210811-WA0027.jpg" class="img-fluid d-block w-100 h-100" alt="JB Infra Plots" data-bs-interval="10000">
                   </div>
                   <div class="carousel-item">
                     <img src="IMG-20210403-WA0049.jpg" class="img-fluid d-block w-100 h-100" alt="JB Infra Plots" data-bs-interval="10000">
                   </div>
                   <div class="carousel-item">
-                    <img src="IMG-20210107-WA0054.jpg" class="img-fluid d-block w-100 h-100" alt="JB Infra Plots">
+                    <img src="IMG-20210107-WA0054.jpg" class="img-fluid d-block w-100 h-100" alt="JB Infra Plots" data-bs-interval="10000">
                   </div>
                 </div>
               </div>
