--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="https://jbinfraprojects.in/favicon.ico"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -68,7 +69,7 @@
 
         <!-- Section 3 start -->
         <div class="sec-3 auto-padding text-center">
-          <div class="fs-1 fw-semibold text-light">Get jammed in the premium locations but not in traffic!</div>
+          <div class="fs-1 fw-semibold text-light">Get jammed in the premium locations not in traffic!</div>
         </div>
         <!-- Section 3 end -->
 
@@ -77,7 +78,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-12 px-5">
-                <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
+                <div id="carouselExampleInterval" class="carousel carousel-dark slide" data-bs-ride="true"  >
                   <div class="carousel-inner">
                     <div class="carousel-item active">
                       <img src="IMG-20230207-WA0051.jpg" class="d-block w-100" alt="..." style="height: 400px;" data-bs-interval="10000">
@@ -89,28 +90,30 @@
                       <img src="IMG-20210403-WA0060.jpg" class="d-block w-100" alt="..." style="height: 400px;" data-bs-interval="10000">
                     </div>
                   </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                   </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                   </button>
                 </div>
               </div>
               <div class="col-md-4 col-12">
-                <div class="head">Location Advantages</div>
+                <div class="head mb-3">Project Features</div>
                 <ul>
-                  <li>Very near to prosed Regional Ring Road</li>
-                  <li>20 min to Pepsi co.</li>
-                  <li>25 min to MRF</li>
-                  <li>30 min to IIT (Indian Institution of Technology)</li>
-                  <li>40 min to GITAM University</li>
-                  <li>35 min to ORR</li>
-                  <li>40 min to Woxsen Business School</li>
-                  <li>The best of IT/software hubs & commercial centers easy reach</li>
-                  <li>Easy connectivity to Patancheru, Chandanagar, Fainancial District, BHEL, Gachibowli, Hitech City, Limgampalli, Narasingi Junction.</li>
+                  <li> DTCP Approved Layout</li>
+                  <li>100% Vasthu</li>
+                  <li>80FT and 60 FT. All BT Roads</li>
+                  <li>Rain Water Harvesting Pits</li>
+                  <li>24/7 Security</li>
+                  <li>Children's Play Area</li>
+                  <li>Roads with Krebs& Avenue Plantations</li>
+                  <li>Electricity</li>
+                  <li>Water Supply</li>
+                  <li>Under Ground Drainage</li>
+                  <li>Pollution Free Environment</li>
                 </ul>
               </div>
              
@@ -141,11 +144,46 @@
         </div>
         <!-- section 4 end -->
 
+        <!-- Section 5 start -->
+        <div class="sec-3 auto-padding text-center">
+          <div class="fs-1 fw-semibold text-light">Get in touch</div>
+          <div class="fs-5 fw-semibold text-light"><a href="tel:+919908953357" class=" text-decoration-none text-light"><img src="phone-call.png" alt="" style="filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(353deg) brightness(107%) contrast(101%);" width="30px"> +91 9908953357</a></div>
+        </div>
+        <!-- Section 5 end -->
+
+        <!-- Section 6 start -->
+        <div class="sec-6 auto-padding">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-7">
+                <div class="head mb-3">Location Advantages</div>
+                <ul>
+                  <li>Very near to prosed Regional Ring Road</li>
+                  <li>20 min to Pepsi co.</li>
+                  <li>25 min to MRF</li>
+                  <li>30 min to IIT (Indian Institution of Technology)</li>
+                  <li>40 min to GITAM University</li>
+                  <li>35 min to ORR</li>
+                  <li>40 min to Woxsen Business School</li>
+                  <li>The best of IT/software hubs & commercial centers easy reach</li>
+                  <li>Easy connectivity to Patancheru, Chandanagar, Fainancial District, BHEL, Gachibowli, Hitech City, Limgampalli, Narasingi Junction.</li>
+                </ul>
+              </div>
+              <div class="col-md-5 text-end">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d9616.77653396187!2d77.83338178776458!3d17.48643592791634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTfCsDI5JzA2LjMiTiA3N8KwNTAnMjMuNiJF!5e0!3m2!1sen!2sin!4v1676218230042!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Section 6 end -->
+
+
 
 
         <!-- footer start -->
 
         <footer>
+
 
         </footer>
 
