--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   Our Prime Venture
                 </div> 
                 <h5 class="sub-head mb-4" style="background-color: rgba(255, 122, 33, 0.836); color: #ffffff; padding: 10px; border-radius: 10px; width: max-content;">
-                  <img src="location.png" alt="" width="20px" style="margin-top: -5px;"> JB’S Venture Mominpet Village
+                  <img src="location.png" alt="" width="20px" style="margin-top: -5px; filter: invert(100%) sepia(0%) saturate(2%) hue-rotate(353deg) brightness(107%) contrast(101%);"> JB’S Venture Mominpet Village
                 </h5>
                 JB staring area from 220 square yard at mominpet Village. <br>
                 A divine space constructed besides the idea of making a perfect living space <br>
