--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="sec-4 auto-padding">
           <div class="container">
             <div class="row">
-              <div class="col-md-8 col-12 px-5">
+              <div class="col-md-8 col-12 px-md-5">
                 <div id="carouselExampleInterval" class="carousel carousel-dark slide" data-bs-ride="true"  >
                   <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -152,7 +152,7 @@
                   <li>Easy connectivity to Patancheru, Chandanagar, Fainancial District, BHEL, Gachibowli, Hitech City, Limgampalli, Narasingi Junction.</li>
                 </ul>
               </div>
-              <div class="col-md-5 text-end d-flex align-items-center">
+              <div class="col-md-5 text-end d-flex align-items-center m-auto">
                 <iframe class="embed-responsive-item video"  src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d9616.77653396187!2d77.83338178776458!3d17.48643592791634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTfCsDI5JzA2LjMiTiA3N8KwNTAnMjMuNiJF!5e0!3m2!1sen!2sin!4v1676218230042!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
@@ -255,7 +255,7 @@
           </div>
 
         </div>
-        <div class="logo">
+        <div class="logo footer-logo">
           <img src="logo-orange-1--unscreen.gif" alt="" class="logo m-3" width="150px">
         </div>
 
