--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
               <div class="col-md-8 col-12 px-md-5">
                 <div id="carouselExampleInterval" class="carousel carousel-dark slide" data-bs-ride="true"  >
                   <div class="carousel-inner">
-                    <div class="carousel-item active">
+                    <div class="carousel-item cor-images active">
                       <img src="IMG-20230207-WA0051.jpg" class="d-block w-100" alt="..." style="height: 400px;" data-bs-interval="10000">
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item cor-images">
                       <img src="IMG-20210403-WA0053.jpg" class="d-block w-100" alt="..." style="height: 400px;" data-bs-interval="10000">
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item cor-images">
                       <img src="IMG-20210403-WA0060.jpg" class="d-block w-100" alt="..." style="height: 400px;" data-bs-interval="10000">
                     </div>
                   </div>
